# markdown-rs-test

./: Cargo.toml  README.md
src/: input.mdx  main.rs  wrappers.rs
