[package]
name = "markdown-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = { git = "https://github.com/wooorm/markdown-rs.git" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "std", "rc", "alloc", "unstable"] }
newtype-enum = "0.1.0"
